Add ability for bootstrap UI to render app icons based on JSON app list

--- a/molly/apps/home/templates/home/testrunner.html
+++ b/molly/apps/home/templates/home/testrunner.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}{% load compressed %}
 
-{% block content %}
+{% block abovecontent %}
     <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
     
     <h1 id="qunit-header">Molly QUnit</h1>
