--- a/molly/ui/bootstrap/templates/base.html
+++ b/molly/ui/bootstrap/templates/base.html
@@ -15,6 +15,7 @@
       }
     </style>
     {% compressed_css 'bootstrap-responsive' %}
+    {% compressed_css 'bootstrapstyles' %}
 
     {# Le HTML5 shim, for IE6-8 support of HTML5 elements #}
     <!--[if lt IE 9]>
@@ -32,32 +33,13 @@
     
     {# Slippy maps #}
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}leaflet/leaflet.css"/>
-    <script type="text/javascript" src="{{ STATIC_URL }}leaflet/leaflet.js"></script>
   </head>
 
   <body>
-
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">{{ site_name }}</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
-
-    <div class="container" id="body">
+    
+    {% block abovecontent %}{% endblock abovecontent %}
+    
+    <div class="container-fluid" id="body">
       {% block content %}
       {% endblock content %}
     </div> <!-- /container -->
@@ -67,7 +49,9 @@
     ==================================================
     Placed at the end of the document so the pages load faster
     {% endcomment %}
+    <script type="text/javascript" src="http://fgnass.github.com/spin.js/dist/spin.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}leaflet/leaflet.js"></script>
     {% compressed_js 'bootstrap' %}
     {% compressed_js 'bootstrapviews' %}
   </body>
