--- a/molly/templates/base.html
+++ b/molly/templates/base.html
@@ -73,6 +73,7 @@
         <link rel="apple-touch-icon" href="{{ STATIC_URL }}site/images/apple-touch-icon.png"/>
         <link rel="apple-touch-icon" sizes="72x72" href="{{ STATIC_URL }}site/images/apple-touch-icon-72px.png"/>
         <link rel="apple-touch-icon" sizes="114x114" href="{{ STATIC_URL }}site/images/apple-touch-icon-114px.png"/>
+        <link rel="apple-touch-icon" sizes="144x144" href="{{ STATIC_URL }}site/images/apple-touch-icon-144px.png"/>
         <link rel="apple-touch-icon-precomposed" href="{{ STATIC_URL }}site/images/apple-touch-icon.png"/>
         <link rel="apple-touch-startup-image" href="{{ STATIC_URL  }}site/images/apple-touch-startup-image.jpg">
     {% endif %}
