added if clause to template to only display pressure if it exists

--- a/molly/apps/weather/templates/weather/index.html
+++ b/molly/apps/weather/templates/weather/index.html
@@ -31,7 +31,9 @@
                 {% if observation.humidity %}
                 {% blocktrans with observation.humidity as humidity %}{{ humidity }}% Relative Humidity{% endblocktrans %}<br/>
                 {% endif %}
+                {% if observation.pressure %}
                 {% blocktrans with observation.pressure as pressure and observation.get_pressure_state_display as pressure_change %}{{ pressure }} mbar and {{ pressure_change }}{% endblocktrans %}<br/>
+                {% endif %}
         </div>
     </div>
 
