Updated template to prevent display of pressure_state if it is not available.

--- a/molly/apps/weather/templates/weather/index.html
+++ b/molly/apps/weather/templates/weather/index.html
@@ -31,8 +31,10 @@
                 {% if observation.humidity %}
                 {% blocktrans with observation.humidity as humidity %}{{ humidity }}% Relative Humidity{% endblocktrans %}<br/>
                 {% endif %}
-                {% if observation.pressure %}
+                {% if observation.pressure_state %}
                 {% blocktrans with observation.pressure as pressure and observation.get_pressure_state_display as pressure_change %}{{ pressure }} mbar and {{ pressure_change }}{% endblocktrans %}<br/>
+                {% else %}
+                {% blocktrans with observation.pressure as pressure %}{{ pressure }} mbar{% endblocktrans %}<br/>
                 {% endif %}
         </div>
     </div>
