Do not index "Real-Time information" (park and rides).

--- a/molly/apps/places/templates/places/metadata/park_and_ride.html
+++ b/molly/apps/places/templates/places/metadata/park_and_ride.html
@@ -1,5 +1,6 @@
 {% load i18n %}
 {% if entity.metadata.park_and_ride %}
+<!--googleoff: all-->
 <div class="section">
   <div class="header">
     <h2>{% trans "Car Park Information" %}</h2>
@@ -20,4 +21,5 @@
     </div>
   </div>
 </div>
+<!--googleon: all-->
 {% endif %}
