--- a/molly/apps/desktop/templates/desktop/index.html
+++ b/molly/apps/desktop/templates/desktop/index.html
@@ -303,8 +303,10 @@ img.shadow {
 		</div>
 
 		<div class="span-15 append-1 last">
-          <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/{{ twitter_username }}"  data-widget-id="{{ twitter_widget_id }}">Tweets by @{{ twitter_username }}</a>
-          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          {% if twitter_username %}
+            <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/{{ twitter_username }}"  data-widget-id="{{ twitter_widget_id }}">Tweets by @{{ twitter_username }}</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          {% endif %}
 		<hr class="space"/>
 		</div>
 		
